<?xml version="1.0"?>
<package>
  <name>akara_msgs</name>
  <version>0.0.0</version>
  <description>The akara_msgs package</description>

  <maintainer email="hfgbvbdf@gmail.com">stsssts</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>



  <!-- The *depend tags are used to specify dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

    <!-- Dependencies needed to compile this package. -->
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
